--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -35,3 +35,9 @@ li {
   display: flex;
   justify-content: center;
 }
+
+.imagemin img {
+  width: 500px;
+  height: 100px;
+  margin: 3vw auto;
+}
